Mobile spacing issue resolved

--- a/src/index.css
+++ b/src/index.css
@@ -91,7 +91,7 @@ h2 {
   .footer {
     position: absolute;
     text-align: center;
-    top: 200vh;
+    top: 225vh;
     padding-bottom: 20px;
     width: 100%;
   }
@@ -105,15 +105,7 @@ h2 {
 @media screen and (max-width: 420px) {
   .about-me {
     position: absolute;
-    top: 110vh;
-    font-size: 18px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .about-me {
-    position: absolute;
-    top: 110vh;
+    top: 130vh;
     font-size: 18px;
   }
 }
